--- a/client/app/scripts/liveblog-syndication/views/consumer-list-item.html
+++ b/client/app/scripts/liveblog-syndication/views/consumer-list-item.html
@@ -1,5 +1,5 @@
 <li 
-    ng-repeat="consumer in consumers" 
+    ng-repeat="consumer in consumers track by $index" 
     ng-click="select(consumer)" 
     ng-class="{selected: consumer === selected}">
 
@@ -24,7 +24,7 @@
             <span>{{ consumer.webhook_url }}</span>
         </div>
         <div class="name api-key">
-            <span id="api-key">{{ consumer.api_key }}</span>
+            <span id="api-key-{{$index}}">{{ consumer.api_key }}</span>
             <span>
                 <a title="Refresh api key"
                    ng-href=""
@@ -33,7 +33,7 @@
                     <i class="icon-refresh true"></i>
                 </a>
             </span>
-            <span lb-copy-to-clipboard for="api-key"></span>
+            <span lb-copy-to-clipboard for="api-key-{{$index}}"></span>
         </div>
         <div lb-first-contact prosumer="consumer" class="name"></div>
     </div>
