--- a/client/app/scripts/liveblog-advertising/views/main.html
+++ b/client/app/scripts/liveblog-advertising/views/main.html
@@ -3,6 +3,7 @@
         <ul class="nav nav-tabs pull-left" >
             <li ng-class="{active: activeState === 'adverts'}"><button ng-click="changeState('adverts')" translate>Adverts</button></li>
             <li ng-class="{active: activeState === 'collections'}"><button ng-click="changeState('collections')" translate>Collections</button></li>
+            <li><button ng-click="output()" translate>Output</button></li>
         </ul>
     </div>
 </div>
