--- a/client/app/scripts/liveblog-edit/views/output-modal.html
+++ b/client/app/scripts/liveblog-edit/views/output-modal.html
@@ -1,62 +1,60 @@
-{{ settings.outputModalActive }}
-<div sd-modal data-model="settings.outputModalActive" class="advertising">
+<div sd-modal data-model="vm.modalActive" class="advertising">
     <div class="modal-header">
-        <button class="close" ng-click="settings.cancelOutputCreate()"><i class="icon-close-small"></i></button>
+        <button class="close" ng-click="vm.cancelModal()"><i class="icon-close-small"></i></button>
         <h3 translate>Add output</h3>
     </div>
     <div class="modal-body" style="min-height: 300px;">
         <div class="item-creation">
             <fieldset>
                 <div class="field">
-                    <label translate>Output Name<span class="ft-alert" ng-if="!settings.output.name" translate>required</span></label>
-                    <input type="text" ng-model="settings.output.name" maxlength="24" required>
+                    <label translate>Output Name<span class="ft-alert" ng-if="!vm.output.name" translate>required</span></label>
+                    <input type="text" ng-model="vm.output.name" maxlength="24" required>
                 </div>
                 <div class="field">
                     <label translate>Choose advertising collection</label>
-                    <select ng-model="settings.output.collection" ng-options="collection._id as collection.name for collection in settings.collections"></select>
+                    <select ng-model="vm.output.collection" ng-options="collection._id as collection.name for collection in vm.collections"></select>
                 </div>
                 <div class="field">
                     <label translate>Background color</label>
-                    <input type="color" ng-model="settings.output.style['background-color']">
+                    <input type="color" ng-model="vm.output.style['background-color']">
                 </div>
                 <div class="field">
                     <label translate>Background Image</label>
                     <div class="upload-form">
                     <section
                         class="main"
-                        sd-image-preview="settings.output.preview.url"
-                        data-file="settings.output.preview.img"
-                        data-progress-width="settings.output.progress.width">
+                        sd-image-preview="vm.output.preview.url"
+                        data-file="vm.output.preview.img"
+                        data-progress-width="vm.output.progress.width">
 
                         <div
                             class="upload-progress"
-                            ng-show="settings.output.progress.width">
+                            ng-show="vm.output.progress.width">
                             <div
                                 class="bar"
-                                style="width: {{ settings.output.progress.width }}%;"></div>
+                                style="width: {{ vm.output.progress.width }}%;"></div>
                         </div>
 
 
-                        <div class="computer" ng-if="!settings.output.preview.url" ng-hide="settings.output.progress.width">
-                            <div class="dropzone" ngf-drop="settings.output.preview.img = $files[0]">
+                        <div class="computer" ng-if="!vm.output.preview.url" ng-hide="vm.output.progress.width">
+                            <div class="dropzone" ngf-drop="vm.output.preview.img = $files[0]">
                                 <div class="text" translate>Drop it here</div>
                                 <div class="input-holder">
-                                    <input type="file" accept="image/*;capture=camera" ngf-select="settings.output.preview.img = $files[0]" label="{{ 'or Select from computer' | translate }}">
+                                    <input type="file" accept="image/*;capture=camera" ngf-select="vm.output.preview.img = $files[0]" label="{{ 'or Select from computer' | translate }}">
                                 </div>
                             </div>
                         </div>
 
-                        <div class="preview" ng-if="settings.output.preview.url">
+                        <div class="preview" ng-if="vm.output.preview.url">
                             <div class="crop-area">
                                 <div class="preview">
                                     <div class="preview-large">
-                                        <img ng-src="{{settings.output.preview.url}}" class="preview-target-1">
+                                        <img ng-src="{{vm.output.preview.url}}" class="preview-target-1">
                                     </div>
                                 </div>
                             </div>
                             <figure class="ads-media-buttons">
-                                <button class="btn btn-success pull-right" ng-click="settings.saveOutputImage()" ng-if="!settings.output.saved" translate>Save Image</button>
-                                <button class="btn btn-warning pull-right" ng-click="settings.removeOutputImage()" translate>Remove</button>
+                                <button class="btn btn-warning pull-right" ng-click="vm.removeOutputImage()" translate>Remove</button>
                             </figure>
                         </div>
                     </section>
@@ -67,9 +65,9 @@
     </div>
     <div class="modal-footer">
         <div>
-            <button type="button" class="btn btn-default pull-left" translate ng-click="settings.cancelOutputCreate()">Cancel</button>
-            <button type="button" class="btn btn-primary btn-info" translate ng-click="settings.saveOutput()"            
-            ng-disabled="!settings.output.name" >Save</button>
+            <button type="button" class="btn btn-default pull-left" translate ng-click="vm.cancelModal()">Cancel</button>
+            <button type="button" class="btn btn-primary btn-info" translate ng-click="vm.saveOutput()"            
+            ng-disabled="!vm.output.name || !vm.readyToSave || vm.disableSave" >Save</button>
         </div>
     </div>
 </div>
