unique per blog

--- a/client/app/scripts/liveblog-edit/views/settings.html
+++ b/client/app/scripts/liveblog-edit/views/settings.html
@@ -356,7 +356,7 @@
                 <!-- Output channels -->
                 <div class="split-content tab-content outer outputs" ng-if="(settings.tab === 'outputs')">
                     <div class="header">
-                        <h2 translate>Output channels</h2>{{ settings.outputModalActive }}
+                        <h2 translate>Output channels</h2>
                         <div class="dropdown navbtn strict add-new-div" title="{{ :: 'Create' | translate }}" dropdown>
                             <button class="dropdown__toggle sd-create-btn" ng-click="settings.openOutputDialog();"></button>
                         </div>
