Fixed new blog button CSS issue

--- a/client/app/scripts/liveblog-bloglist/styles/liveblog-bloglist.scss
+++ b/client/app/scripts/liveblog-bloglist/styles/liveblog-bloglist.scss
@@ -29,11 +29,13 @@
                 font-size: 1.25em;
             }
             button {
+                height: 40px;
                 margin: 20px 0;
                 .title {
                     top: -4px;
                     position: relative;
                     left: 4px;
+                    color: #fff;
                 }
             }
         }
@@ -237,4 +239,6 @@
         opacity: .6;
         filter: alpha(opacity=60);
     }
+
+
 }
