feature: added `output` s3 publishing.

--- a/server/liveblog/blogs/templates/embed.html
+++ b/server/liveblog/blogs/templates/embed.html
@@ -19,7 +19,7 @@
         {% endif %}
     </head>
 
-    <body style="{{ output.get('style') | tostyle | safe }}">
+    <body style="{{ (output and output.get('style')) | tostyle | safe }}">
 
         {{ template | safe }}
 
