Added producer api_status

--- a/client/app/scripts/liveblog-syndication/styles/syndication.scss
+++ b/client/app/scripts/liveblog-syndication/styles/syndication.scss
@@ -213,6 +213,10 @@ i.webhook-status.off {
     color: $red;
 }
 
+i.webhook-status.warn {
+    color: $orange;
+}
+
 i.webhook-status.on {
     color: $green;
 }
