--- a/client/app/scripts/liveblog-syndication/views/producer-list-item.html
+++ b/client/app/scripts/liveblog-syndication/views/producer-list-item.html
@@ -19,8 +19,8 @@
                 ng-if="producer.api_status === 'invalid_url'"></i>
             <i
                 class="icon-warning-sign webhook-status warn"
-                title="Webhook URL up & running"
-                ng-if="producer.api_status === 'invalid-key'"></i>
+                title="Invalid webhook URL key"
+                ng-if="producer.api_status === 'invalid_key'"></i>
             <i
                 class="icon-ok webhook-status on"
                 title="Webhook URL up & running"
