--- a/client/app/scripts/liveblog-edit/views/output-modal.html
+++ b/client/app/scripts/liveblog-edit/views/output-modal.html
@@ -1,7 +1,7 @@
 <div sd-modal data-model="vm.modalActive" class="advertising">
     <div class="modal-header">
         <button class="close" ng-click="vm.cancelModal()"><i class="icon-close-small"></i></button>
-        <h3 translate>Add output</h3>
+        <h3 translate>{{ vm.output._id? 'Edit': 'Add' | translate }} output</h3>
     </div>
     <div class="modal-body" style="min-height: 300px;">
         <div class="item-creation">
@@ -21,44 +21,51 @@
                 <div class="field">
                     <label translate>Background Image</label>
                     <div class="upload-form">
-                    <section
-                        class="main"
-                        sd-image-preview="vm.output.preview.url"
-                        data-file="vm.output.preview.img"
-                        data-progress-width="vm.output.progress.width">
+                        <section
+                            class="main"
+                            sd-image-preview="vm.output.preview.url"
+                            data-file="vm.output.preview.img"
+                            data-progress-width="vm.output.progress.width">
 
-                        <div
-                            class="upload-progress"
-                            ng-show="vm.output.progress.width">
                             <div
-                                class="bar"
-                                style="width: {{ vm.output.progress.width }}%;"></div>
-                        </div>
-
-
-                        <div class="computer" ng-if="!vm.output.preview.url" ng-hide="vm.output.progress.width">
-                            <div class="dropzone" ngf-drop="vm.output.preview.img = $files[0]">
-                                <div class="text" translate>Drop it here</div>
-                                <div class="input-holder">
-                                    <input type="file" accept="image/*;capture=camera" ngf-select="vm.output.preview.img = $files[0]" label="{{ 'or Select from computer' | translate }}">
-                                </div>
+                                class="upload-progress"
+                                ng-show="vm.output.progress.width">
+                                <div
+                                    class="bar"
+                                    style="width: {{ vm.output.progress.width }}%;"></div>
                             </div>
-                        </div>
 
-                        <div class="preview" ng-if="vm.output.preview.url">
-                            <div class="crop-area">
-                                <div class="preview">
-                                    <div class="preview-large">
-                                        <img ng-src="{{vm.output.preview.url}}" class="preview-target-1">
+
+                            <div class="computer" ng-if="!vm.output.preview.url" ng-hide="vm.output.progress.width">
+                                <div class="dropzone" ngf-drop="vm.output.preview.img = $files[0]">
+                                    <div class="text" translate>Drop it here</div>
+                                    <div class="input-holder">
+                                        <input type="file" accept="image/*;capture=camera" ngf-select="vm.output.preview.img = $files[0]" label="{{ 'or Select from computer' | translate }}">
                                     </div>
                                 </div>
                             </div>
-                            <figure class="ads-media-buttons">
-                                <button class="btn btn-warning pull-right" ng-click="vm.removeOutputImage()" translate>Remove</button>
-                            </figure>
-                        </div>
-                    </section>
+
+                            <div class="preview" ng-if="vm.output.preview.url">
+                                <div class="crop-area">
+                                    <div class="preview">
+                                        <div class="preview-large">
+                                            <img ng-src="{{vm.output.preview.url}}" class="preview-target-1">
+                                        </div>
+                                    </div>
+                                </div>
+                                <figure class="ads-media-buttons">
+                                    <button class="btn btn-warning pull-right" ng-click="vm.removeOutputImage()" translate>Remove</button>
+                                </figure>
+                            </div>
+                        </section>
+                    </div>
                 </div>
+                <div class="field" ng-if="vm.output._id">
+                    <label for="inputEmbedCode" class="control-label" translate>Embed code</label>
+                    <div class="form-input">
+                        <textarea class="form-control" rows="6" readonly="readonly" select-text-on-click>{{ vm.blog.public_urls.output[vm.output._id] }}</textarea>
+                        <a href="{{ vm.blog.public_urls.output[vm.output._id] }}" target="_blank"><span ng-bind="vm.blog.public_urls.output[vm.output._id]"></span> <i class="icon-external"></i></a>
+                    </div>
                 </div>
             </fieldset>
         </div>
