Major UI bug fixes

--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -183,6 +183,13 @@
                     }
                 }
             }
+            .button-stack {
+                &.right-stack {
+                    .navbtn {
+                    width: 48px;
+                    }
+                }
+            }
         }
         // editor
         &--editor .content {
