--- a/client/app/scripts/liveblog-syndication/views/contacts-edit-form.html
+++ b/client/app/scripts/liveblog-syndication/views/contacts-edit-form.html
@@ -7,7 +7,7 @@
             <button 
                 ng-if="$index" 
                 type="button" 
-                class="btn btn-info pull-right" 
+                class="btn btn--primary pull-right" 
                 ng-click="removeContact($index)">Remove</button>
         </div>
 
@@ -66,4 +66,4 @@
     </fieldset>
 </div>
 
-<div><button type="btn" class="btn btn-info" ng-click="addContact()">Add</button></div>
+<div><button type="btn" class="btn btn--primary" ng-click="addContact()">Add</button></div>
