--- a/client/app/scripts/liveblog-syndication/views/producer-list.html
+++ b/client/app/scripts/liveblog-syndication/views/producer-list.html
@@ -1,5 +1,5 @@
 <div class="subnav pan-right">
-    <div class="button-stack right-stack new-producer">
+    <div class="subnav__button-stack--square-buttons">
         <button class="navbtn sd-create-btn" ng-click="createEntry()"></button>
     </div>
 </div>
