--- a/client/app/scripts/liveblog-themes/views/theme-settings-modal.html
+++ b/client/app/scripts/liveblog-themes/views/theme-settings-modal.html
@@ -36,7 +36,7 @@
         </form>
     </div>
     <div class="modal-footer">
-        <button ng-click="vm.submitSettings()" type="submit" class="btn btn-default" ng-disabled="vm.themeSettingsForm.$invalid || !vm.themeSettingsForm.$dirty">Save</button>
-        <button ng-click="vm.submitSettings(true)" type="submit" class="btn btn-primary">Done</button>
+        <button ng-click="vm.submitSettings()" type="submit" class="btn btn--primary" ng-disabled="vm.themeSettingsForm.$invalid || !vm.themeSettingsForm.$dirty">Save</button>
+        <button ng-click="vm.submitSettings(true)" type="submit" class="btn btn-default">Done</button>
     </div>
 </div>
