--- a/client/app/template/datepicker/popup.html
+++ b/client/app/template/datepicker/popup.html
@@ -4,7 +4,7 @@
 	<li style="padding: 9px;">
 		<span class="btn-group">
 			<button type="button" class="btn btn-small btn-inverse" ng-click="today()">{{currentText}}</button>
-			<button type="button" class="btn btn-small btn-info" ng-click="showWeeks = ! showWeeks" ng-class="{active: showWeeks}">{{toggleWeeksText}}</button>
+			<button type="button" class="btn btn-small btn--primary" ng-click="showWeeks = ! showWeeks" ng-class="{active: showWeeks}">{{toggleWeeksText}}</button>
 			<button type="button" class="btn btn-small btn-danger" ng-click="clear()">{{clearText}}</button>
 		</span>
 		<button type="button" class="btn btn-small btn-success pull-right" ng-click="isOpen = false">{{closeText}}</button>
