--- a/client/app/scripts/liveblog-analytics/views/view-analytics.html
+++ b/client/app/scripts/liveblog-analytics/views/view-analytics.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="content content--analytics">
                         <div ng-if="analytics_data">                            
-                            <button class="btn btn-info pull-right mod--absoluteright" ng-click="" translate="">
+                            <button class="btn btn--primary pull-right mod--absoluteright" ng-click="" translate="">
                                 <span class="ng-scope" ng-click="analytics.downloadCSV()">Download CSV</span>
                             </button>
                             <lb-analytics-list showSourceBadge="false" loadMore="loadMore()"" analytics="analytics_data"></lb-analytics-list>
