--- a/client/app/scripts/liveblog-bloglist/views/main.html
+++ b/client/app/scripts/liveblog-bloglist/views/main.html
@@ -8,10 +8,11 @@
             <li ng-class="{active: activeState === state}" ng-repeat="state in states"><button ng-click="changeState(state)" translate>{{ ::state.text }}</button></li>
         </ul>
     </div>
-
-    <div class="button-stack right-stack" ng-if="isUserAllowedToCreateABlog();">
-        <button class="navbtn navbtn-info" ng-click="openNewBlog();" title="{{ 'Create Blog' | translate }}">
-            <i class="svg-icon-add inverse"></i>
+    <div class="subnav__stretch-bar"></div>
+    <div class="subnav__button-stack--square-buttons" ng-if="isUserAllowedToCreateABlog();">
+        <button class="navbtn sd-create-btn" ng-click="openNewBlog();" title="{{ 'Create Blog' | translate }}">
+            <i class="svg-icon-plus"></i>
+            <span class="circle"></span>
         </button>
     </div>
 </div>
@@ -37,7 +38,7 @@
         <!-- empty state -->
         <div ng-if="blogs._meta.total === 0" class="empty-state">
             <div translate>No blogs found.</div>
-            <button ng-if="activeState.code === 'open'" class="btn btn-info btn-large" ng-click="openNewBlog();">
+            <button ng-if="activeState.code === 'open'" class="btn btn--primary btn-large" ng-click="openNewBlog();">
                 <i class="svg-icon-add inverse"></i>
                 <span class="title" translate>Create a Blog</span>
             </button>
@@ -117,8 +118,11 @@
                 <button class="close" ng-click="cancelEmbed()"><i class="icon-close-small"></i></button>
                 <h3 translate>Get blog list embed</h3>
             </div>
-            <div class="modal-body" style="min-height: 300px;">
+            <div class="modal-body" style="min-height: 240px;">
                 <textarea class="form-control" rows="6" readonly="readonly" select-text-on-click>{{ bloglistEmbed }}</textarea>
+            </div>
+            <div class="modal-footer">
+                <button class="btn" ng-click="cancelEmbed()">Close</button>
             </div>
     </div>
 
@@ -253,7 +257,7 @@
                     ng-show="creationInProcess"><span translate>Creating new blog</span></div>
                 <div ng-if="creationStep === 'Details'">
                     <span class="error">{{newBlogError}}</span>
-                    <button class="btn btn-primary btn-info" type="button" ng-disabled="!createBlogForm.$valid"
+                    <button class="btn btn-primary btn--primary" type="button" ng-disabled="!createBlogForm.$valid"
                     translate ng-click="switchTab('Team')">Next</button>
                 </div>
                 <div ng-if="creationStep === 'Team'">
@@ -264,7 +268,7 @@
                         ng-click="switchTab('Details')">Back</button>
                     <button 
                         type="button" 
-                        class="btn btn-primary btn-info" 
+                        class="btn btn--primary" 
                         ng-hide="creationInProcess"
                         translate 
                         ng-click="createBlog()">Create</button>
@@ -288,7 +292,7 @@
             <button type="button" class="btn btn-default" translate ng-click="closeAccessRequest()">Cancel</button>
             <button
               type="submit"
-              class="btn btn-primary btn-info pull-left"
+              class="btn btn--primary pull-left"
               translate
               ng-disabled="!allowAccessRequest"
               ng-click="requestAccess(accessRequestedTo)">Request Access</button>
