--- a/client/app/scripts/liveblog-freetypes/styles/freetypes.scss
+++ b/client/app/scripts/liveblog-freetypes/styles/freetypes.scss
@@ -3,7 +3,7 @@
         position: absolute;
         top: 0px;
         left: 0; right: 0; bottom: 0;
-        padding: 30px 30px 30px 0;
+        padding: 20px;
         overflow-y: auto;
         ul {
             li {
