--- a/client/app/scripts/liveblog-settings/views/general.html
+++ b/client/app/scripts/liveblog-settings/views/general.html
@@ -1,7 +1,7 @@
 <div sd-settings-view class="general-settings">
     <div class="split-content">
         <div style="margin:10px">
-            <button ng-click="saveSettings()" class="btn btn-info pull-right" type="button" translate ng-disabled="!setForm.$dirty">Save</button>
+            <button ng-click="saveSettings()" class="btn btn--primary pull-right" type="button" translate ng-disabled="!setForm.$dirty">Save</button>
             <button ng-click="close()" class="btn btn-default pull-right" type="button" translate>Cancel</button>
         </div>
         <div class="content">
