--- a/client/app/scripts/liveblog-syndication/views/consumer-edit-form.html
+++ b/client/app/scripts/liveblog-syndication/views/consumer-edit-form.html
@@ -3,7 +3,7 @@
         <button
             id="save-edit-btn" 
             type="submit" 
-            class="btn btn-info pull-right" 
+            class="btn btn--primary pull-right" 
             translate>Save</button>
 
         <button 
@@ -15,7 +15,7 @@
     </div>
 
     <div class="profile-info editmode">
-        <div class="details-info form-flat" ng-class="{shifted : error}">
+        <div class="details-info details-info--no-avatar form-flat" ng-class="{shifted : error}">
             <div class="title">{{ 'General' | translate }} <span class="required-info" translate>* mandatory fields</span></div>
             <fieldset class="label-light">
                 <div sd-info-item>
