--- a/client/app/styles/sass/liveblog.scss
+++ b/client/app/styles/sass/liveblog.scss
@@ -6,6 +6,21 @@
 	background: #e0e0e0;
 }
 
+// .subnav {
+//     display: block;
+// }
+
+.page-nav-title {
+    padding: 10px 0;
+}
+.navbtn i+.title {
+    margin-left: 10px;
+}
+
+.navbtn .title {
+    text-transform: uppercase;
+}
+
 .button-stack > .btn {
   margin-left: 20px;
   margin-top: 10px;
@@ -20,6 +35,9 @@
   border-left: 1px solid rgba(0, 0, 0, 0.1) !important;
   //border-right: 0 !important;
   line-height: 46px;
+  width: auto;
+  min-width: 48px;
+  padding: 0 14px;
 }
 
 .button-stack.right-stack .navbtn .dropdown-toggle {
@@ -291,7 +309,7 @@
 div.subnav div.button-stack.left-stack a.homebtn {
     border-right: 1px solid rgba(0, 0, 0, 0.1);
 }
-div.settings-page button {
+div.settings-page .subnav .btn {
     margin-top: 10px;
 }
 div.settings-page button.last-right {
@@ -303,6 +321,7 @@ div.settings-page div.datepicker-input button, div.settings-page div.timepicker-
 }
 button.btn-info {
     background-color: #5ea9c8;
+    color: white;
 }
 #main-menu .footer .icon-superdesk {
     background-size: 156px 48px;
