--- a/client/app/template/datepicker/datepicker.html
+++ b/client/app/template/datepicker/datepicker.html
@@ -14,7 +14,7 @@
     <tr ng-repeat="row in rows">
       <td ng-show="showWeekNumbers" class="text-center"><em>{{ getWeekNumber(row) }}</em></td>
       <td ng-repeat="dt in row" class="text-center">
-        <button type="button" style="width:100%;" class="btn" ng-class="{'btn-info': dt.selected}" ng-click="select(dt.date)" ng-disabled="dt.disabled"><span ng-class="{muted: dt.secondary}">{{dt.label}}</span></button>
+        <button type="button" style="width:100%;" class="btn" ng-class="{'btn--primary': dt.selected}" ng-click="select(dt.date)" ng-disabled="dt.disabled"><span ng-class="{muted: dt.secondary}">{{dt.label}}</span></button>
       </td>
     </tr>
   </tbody>
