Squashed 'server/liveblog/themes/themes_assets/default/' changes from bcf2ade..2260ac7
2260ac7 Fix template inject.
e47ab60 Update manifest.
2677101 rename templates
2ee6433 restore standalone development

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 2260ac728208d2312bec9c8c65884d043dafa68d

--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -15,9 +15,9 @@
   {% for ref in item.groups[1].refs %}
     <div class="lb-item">
       {% if ref.item.item_type == "embed" %}
-        {% include "item-embed.html" %}
+        {% include "template-item-embed.html" %}
       {% elif ref.item.item_type == "image" %}
-        {% include "item-image.html" %}
+        {% include "template-item-image.html" %}
       {% else %}
         <article>{{ ref.item.text | safe }}</article>
       {% endif %}
