--- a/client/app/scripts/liveblog-edit/views/freetype-image.html
+++ b/client/app/scripts/liveblog-edit/views/freetype-image.html
@@ -21,7 +21,8 @@
                     <div class="dropzone" ngf-drop="preview.img = $files[0]">
                         <div class="text" translate>Drop it here</div>
                         <div class="input-holder">
-                            <input type="file" accept="image/*;capture=camera" ngf-select="preview.img = $files[0]" label="{{ 'or Select from computer' | translate }}">
+                            <input type="file" accept="image/*;capture=camera" ngf-select="preview.img = $files[0]"
+                            label="{{ 'or Select from computer' | translate }}" ng-change="ft.saveImage()" ng-model="preview.img">
                         </div>
                         </div>
                     </div>
@@ -35,7 +36,6 @@
                         </div>
                     </div>
                     <figure class="ads-media-buttons">
-                        <button class="btn btn-success pull-right" ng-click="ft.saveImage()" ng-if="!saved" translate>Save Image</button>
                         <button class="btn btn-warning pull-right" ng-click="ft.removeImage()" translate>Remove</button>
                     </figure>
                 </div>
