--- a/client/app/scripts/liveblog-edit/views/settings.html
+++ b/client/app/scripts/liveblog-edit/views/settings.html
@@ -399,6 +399,7 @@
 <output-modal
     modal-active="settings.outputModalActive"
     output="settings.output"
+    outputs="settings.outputs"
     blog="settings.blog"
 ></output-modal>
 
