--- a/templates/template-timeline.html
+++ b/templates/template-timeline.html
@@ -1,9 +1,20 @@
 <div class="lb-timeline" data-js-target="timeline">
   {% block timeline %}
   <div class="lb-timeline {{ options.language }}">
-    {% if theme_options.settings.showTitle %}
+    {% if theme_options.settings.showTitle and theme_options.blog.title %}
       <h1>{{theme_options.blog.title}}</h1>
     {% endif %}
+
+    {% if theme_options.settings.showDescription and theme_options.blog.description %}
+      <div class="description">
+        {{theme_options.blog.description | safe}}
+      </div>
+    {% endif %}
+
+    {% if theme_options.settings.showImage and theme_options.blog.picture_url %}
+      <img src="{{theme_options.blog.picture_url}}" />
+    {% endif %}
+
     <!-- Header -->
     <div class="header-bar">
       <div class="sorting-bar">
