add workaround for rogue embedly closing div

--- a/templates/template-item-embed.html
+++ b/templates/template-item-embed.html
@@ -1,1 +1,1 @@
-<div class="item--embed">{{ ref.item.meta.html | safe or ref.item.meta.meta.html | safe }}</div>
+<div class="item--embed"><div>{{ ref.item.meta.html | safe or ref.item.meta.meta.html | safe }}</div>
