--- a/templates/template-index.html
+++ b/templates/template-index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    {% if theme_settings.blockSearchEngines -%}
+    {% if settings.blockSearchEngines %}
       <meta name="robots" content="noindex, follow">
     {% endif %}
     <!-- inject:css -->
@@ -15,9 +15,6 @@
     <div class="" data-js-target="timeline">
       {% include "template-timeline.html" %}
     </div>
-    <script type="text/javascript">
-      window.LB = {{ options|safe }}
-    </script>
     <!-- inject:js -->
     <!-- endinject -->
     {% include "template-embed-providers.html" %}
