--- a/templates/template-timeline.html
+++ b/templates/template-timeline.html
@@ -1,18 +1,18 @@
 <div class="lb-timeline" data-js-target="timeline">
   {% block timeline %}
-  <div class="lb-timeline {{ options.language }}">
-    {% if theme_options.settings.showTitle and theme_options.blog.title %}
-      <h1>{{theme_options.blog.title}}</h1>
+  <div class="lb-timeline {{ settings.language }}">
+    {% if settings.showTitle and blog.title %}
+      <h1>{{ blog.title }}</h1>
     {% endif %}
 
-    {% if theme_options.settings.showDescription and theme_options.blog.description %}
+    {% if settings.showDescription and blog.description %}
       <div class="description">
-        {{theme_options.blog.description | safe}}
+        {{ blog.description | safe}}
       </div>
     {% endif %}
 
-    {% if theme_options.settings.showImage and theme_options.blog.picture_url %}
-      <img src="{{theme_options.blog.picture_url}}" />
+    {% if settings.showImage and blog.picture_url %}
+      <img src="{{ blog.picture_url }}" />
     {% endif %}
 
     <!-- Header -->
@@ -23,12 +23,12 @@
                 id="newest_first"
                 class="sorting-bar__order sorting-bar__order--active"
                 data-js-orderby-newest-first>
-                {{ theme_options.l10n.newestFirst }}</div>
+                {{ theme.l10n.newestFirst }}</div>
               <div
                 id="oldest_first"
                 class="sorting-bar__order"
                 data-js-orderby-oldest-first>
-                {{ theme_options.l10n.oldestFirst }}</div>
+                {{ theme.l10n.oldestFirst }}</div>
           </div>
       </div>
       <div class="header-bar__actions"></div>
@@ -50,7 +50,7 @@
           {% endfor %}
         </section>
         {% if api_response._meta.max_results <= api_response._meta.total %}
-          <button class="lb-button load-more-posts" data-js-loadmore>{{ theme_options.l10n.loadNewPosts }}</button>
+          <button class="lb-button load-more-posts" data-js-loadmore>{{ theme.l10n.loadNewPosts }}</button>
         {% endif %}
       {% endif %}
     </div>
@@ -61,8 +61,8 @@
 
 {% include "template-embed-providers.html" %}
 
-{% if options and include_js_options %}
+{% if include_js_options %}
 <script type="text/javascript">
-window.LB = {{ options|safe }};
+window.LB = {{ theme_json|safe }};
 </script>
 {% endif %}
