--- a/templates/template-timeline.html
+++ b/templates/template-timeline.html
@@ -1,18 +1,18 @@
 <div class="lb-timeline" data-js-target="timeline">
   {% block timeline %}
-  <div class="lb-timeline {{ options.language }}">
-    {% if theme_options.settings.showTitle and theme_options.blog.title %}
-      <h1>{{theme_options.blog.title}}</h1>
+  <div class="lb-timeline {{ settings.language }}">
+    {% if settings.showTitle and blog.title %}
+      <h1>{{ settings.blog.title }}</h1>
     {% endif %}
 
-    {% if theme_options.settings.showDescription and theme_options.blog.description %}
+    {% if settings.showDescription and blog.description %}
       <div class="description">
-        {{theme_options.blog.description | safe}}
+        {{ blog.description | safe }}
       </div>
     {% endif %}
 
-    {% if theme_options.settings.showImage and theme_options.blog.picture_url %}
-      <img src="{{theme_options.blog.picture_url}}" />
+    {% if settings.showImage and blog.picture_url %}
+      <img src="{{ blog.picture_url }}" />
     {% endif %}
 
     <!-- Header -->
