--- a/client/app/scripts/liveblog-edit/views/output-embed-code-modal.html
+++ b/client/app/scripts/liveblog-edit/views/output-embed-code-modal.html
@@ -9,7 +9,7 @@
                 <div class="field" ng-if="settings.output._id">
                     <label for="inputEmbedCode" class="control-label" translate>Embed code</label>
                     <div class="form-input">
-                        <textarea class="form-control" rows="6" readonly="readonly" select-text-on-click>{{ settings.blog.public_urls.output[settings.output._id] }}</textarea>
+                        <textarea class="form-control" rows="6" readonly="readonly" select-text-on-click><iframe src="{{ settings.blog.public_urls.output[settings.output._id] }}"></iframe></textarea>
                         <a href="{{ settings.blog.public_urls.output[settings.output._id] }}" target="_blank"><span ng-bind="settings.blog.public_urls.output[settings.output._id]"></span> <i class="icon-external"></i></a>
                     </div>
                 </div>
