Fix timeline markup.

--- a/templates/template-timeline.html
+++ b/templates/template-timeline.html
@@ -1,4 +1,4 @@
-<div class="lb-timeline" data-js-target="timeline">
+<div class="" data-js-target="timeline">
   {% block timeline %}
   <div class="lb-timeline {{ settings.language }}">
     {% if settings.showTitle and blog.title %}
