--- a/templates/template-timeline.html
+++ b/templates/template-timeline.html
@@ -1,4 +1,4 @@
-<div class="lb-timeline" data-js-target="timeline">
+<div class="" data-js-target="timeline">
   {% block timeline %}
   <div class="lb-timeline {{ settings.language }}">
     {% if settings.showTitle and blog.title %}
@@ -19,11 +19,11 @@
     <div class="header-bar">
       <div class="sorting-bar">
         <div class="sorting-bar__orders">
-          <div class="sorting-bar__order sorting-bar__order--active" data-js-orderby_newest_first>
-            {{ theme.l10n.newestFirst }}
+          <div class="sorting-bar__order sorting-bar__order--active" data-js-orderby_descending>
+            {{ theme.l10n.descending }}
           </div>
-          <div class="sorting-bar__order" data-js-orderby_oldest_first>
-            {{ theme.l10n.oldestFirst }}
+          <div class="sorting-bar__order" data-js-orderby_ascending>
+            {{ theme.l10n.ascending }}
           </div>
         </div>
       </div>
