feature: added output.settings support.

--- a/client/app/scripts/liveblog-edit/views/output-modal.html
+++ b/client/app/scripts/liveblog-edit/views/output-modal.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="field">
                     <label translate>Order</label>
-                    <select ng-model="vm.output.collection" ng-options="order.value as order.title for order in vm.ordering"></select>
+                    <select ng-model="vm.output.settings.order" ng-options="order.value as order.title for order in vm.ordering"></select>
                 </div>
                 <div class="field">
                     <label translate>Background color</label>
