--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -809,7 +809,10 @@
     width: auto;
     z-index: 2;
     position: absolute;
-    right: 40px;
+    right: -60px;
+    &.default {
+        right: 40px;
+    }
     top: 2px;
     li {
         padding: 0px 5px;
