--- a/templates/template-timeline.html
+++ b/templates/template-timeline.html
@@ -18,10 +18,14 @@
   <div class="header-bar">
     <div class="sorting-bar">
       <div class="sorting-bar__orders">
-        <div class="sorting-bar__order sorting-bar__order--active" data-js-orderby_descending>
+        <div
+          class="sorting-bar__order {%if settings.postOrder != 'oldest_first' %}sorting-bar__order--active{% endif %}"
+          data-js-orderby_descending>
           {{ theme.l10n.descending }}
         </div>
-        <div class="sorting-bar__order" data-js-orderby_ascending>
+        <div
+          class="sorting-bar__order {%if settings.postOrder == 'oldest_first'%}sorting-bar__order--active{% endif %}"
+          data-js-orderby_ascending>
           {{ theme.l10n.ascending }}
         </div>
       </div>
